# lexify.md

./: GLOSSARY.md  README.md  pyproject.toml
.github/workflows/: python-app.yml
docs/: REQUIREMENTS.md
src/lexify/: crud.py  glossary_parser.py  main.py  term_definition.py  wording.py
tests/: README.md
tests/lexify/: crud_test.py  glossary_parser_test.py  term_definition_test.py
tests/lexify/assets/: mock_glossary.md
