[tool.poetry]
name = "lexify-md"
version = "0.1.0"
description = ""
authors = ["balex"]
license = "MIT"
readme = "README.md"
packages = [{include = "lexify", from="src"}]

[tool.poetry.dependencies]
python = "^3.10"
click = "^8.1.7"

[tool.poetry.scripts]
lexify = "lexify.main:cli"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.2"
pytest-cov = "^4.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
